--- a/index.html
+++ b/index.html
@@ -52,35 +52,35 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad impedit ipsa aliquam maxime repellendus,
               laboriosam voluptatem cumque quis harum ex ratione hic eaque unde animi dolorum soluta maiores, tempora
               laudantium?</p>
-            <img src="C:\Users\user\Desktop\まいHTMLたぐ\image\cat.image.webp" alt="" width="100%">
+            <img src="image\cat.image.webp" alt="" width="100%">
           </div>
           <div>
             <h2>JS</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ipsam quas molestias praesentium
               temporibus hic. Repellat placeat animi optio quia aut quod, voluptas ut, eveniet voluptate totam, earum
               qui. Harum.</p>
-            <img src="C:\Users\user\Desktop\まいHTMLたぐ\image\bird.pic1.jpg" alt="" width="100%">
+            <img src="image\bird.pic1.jpg" alt="" width="100%">
           </div>
           <div>
             <h2>GIT</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga magni pariatur voluptatem expedita quam?
               Ratione alias voluptatum consequuntur doloribus labore, sequi assumenda deleniti! Eius dolores non, culpa
               explicabo sed iste.</p>
-            <img src="C:\Users\user\Desktop\まいHTMLたぐ\image\bird.pic2.jpg" alt="" width="100%">
+            <img src="image\bird.pic2.jpg" alt="" width="100%">
           </div>
           <div>
             <h2>SQL</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione rerum temporibus similique, eos ipsum
               inventore architecto reprehenderit unde fugiat, quos nam natus cumque tempore itaque tenetur alias nulla
               accusantium exercitationem.</p>
-            <img src="C:\Users\user\Desktop\まいHTMLたぐ\image\bird.pic3.jpg" alt="" width="100%">
+            <img src="image\bird.pic3.jpg" alt="" width="100%">
           </div>
           <div>
             <h2>PHP</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quaerat quis voluptatum impedit eius
               reiciendis perferendis ex officiis id voluptates, quasi, reprehenderit magnam recusandae eaque sed
               obcaecati similique expedita laborum?</p>
-            <img src="C:\Users\user\Desktop\まいHTMLたぐ\image\bird.pic4.jpg" alt="" width="100%">
+            <img src="image\bird.pic4.jpg" alt="" width="100%">
           </div>
         </div>
       </article>
